tools/tests/ui/fail/l1006.cnf
// Test file for error code: L1006
// Expected error: Invalid Malformed character in indentation -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-invalid".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
